--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -4,10 +4,10 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:res="clr-namespace:VidCoder.Resources"
-	xmlns:viewModel="clr-namespace:VidCoder.ViewModel"
+	xmlns:vidCoder="clr-namespace:VidCoder"
 	Title="{Binding WindowTitle}"
-	Width="500"
-	Height="450"
+	Width="{x:Static vidCoder:WindowConstants.PickerDefaultWidth}"
+	Height="{x:Static vidCoder:WindowConstants.PickerDefaultHeight}"
 	MinWidth="450"
 	MinHeight="300"
 	Closing="PickerWindow_OnClosing"
