--- a/VidCoder/View/EncodeDetailsWindow.xaml
+++ b/VidCoder/View/EncodeDetailsWindow.xaml
@@ -1,11 +1,17 @@
-﻿<Window x:Class="VidCoder.View.EncodeDetailsWindow"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:Resources="clr-namespace:VidCoder.Resources"
-		WindowStyle="ToolWindow" ShowInTaskbar="False" Style="{StaticResource NormalWindow}"
-		Title="{x:Static Resources:EncodeDetailsRes.EncodeDetailsWindowTitle}"
-		Height="374" Width="360" MinWidth="200" MinHeight="300"
-		Closing="Window_Closing">
+﻿<Window
+	x:Class="VidCoder.View.EncodeDetailsWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:Resources="clr-namespace:VidCoder.Resources"
+	Title="{x:Static Resources:EncodeDetailsRes.EncodeDetailsWindowTitle}"
+	Width="360"
+	Height="374"
+	MinWidth="200"
+	MinHeight="300"
+	Closing="Window_Closing"
+	ShowInTaskbar="False"
+	Style="{StaticResource NormalWindow}"
+	WindowStyle="ToolWindow">
 	<Window.Resources>
 		<Style x:Key="ItemLabel" TargetType="TextBlock">
 			<Setter Property="Margin" Value="4" />
@@ -14,11 +20,11 @@
 			<Setter Property="Margin" Value="4" />
 		</Style>
 		<Style x:Key="EncodeDetailsProgress" TargetType="ProgressBar">
-			<Setter Property="Margin" Value="0,0,10,0"/>
-			<Setter Property="Foreground" Value="{StaticResource ProgressBarBrush}"/>
+			<Setter Property="Margin" Value="0,0,10,0" />
+			<Setter Property="Foreground" Value="{StaticResource ProgressBarBrush}" />
 		</Style>
 	</Window.Resources>
-	<StackPanel Orientation="Vertical" Margin="10,10,0,0">
+	<StackPanel Margin="10,10,0,0" Orientation="Vertical">
 		<Grid Margin="0,0,0,10">
 			<Grid.RowDefinitions>
 				<RowDefinition />
@@ -31,33 +37,65 @@
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition />
 			</Grid.ColumnDefinitions>
-			<TextBlock Grid.Row="0" Grid.Column="0" Text="{x:Static Resources:EncodeDetailsRes.QueueSectionHeader}" Style="{StaticResource SectionHeader}"/>
+			<TextBlock
+				Grid.Row="0"
+				Grid.Column="0"
+				Style="{StaticResource SectionHeader}"
+				Text="{x:Static Resources:EncodeDetailsRes.QueueSectionHeader}" />
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.JobLabel}" Grid.Row="1" Grid.Column="0" Style="{StaticResource ItemLabel}" />
-			<TextBlock 
-				Text="{Binding TaskNumberDisplay}" 
-				Grid.Row="1" Grid.Column="1" Style="{StaticResource ItemValue}" />
+			<TextBlock
+				Grid.Row="1"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.JobLabel}" />
+			<TextBlock
+				Grid.Row="1"
+				Grid.Column="1"
+				Style="{StaticResource ItemValue}"
+				Text="{Binding TaskNumberDisplay}" />
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.ProgressLabel}" Grid.Row="2" Grid.Column="0" Style="{StaticResource ItemLabel}" />
+			<TextBlock
+				Grid.Row="2"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.ProgressLabel}" />
 			<Grid Grid.Row="2" Grid.Column="1">
-				<ProgressBar 
-					Height="15" VerticalAlignment="Center" Value="{Binding OverallProgressPercent}"
-					Style="{StaticResource EncodeDetailsProgress}"/>
-				<TextBlock 
-					Text="{Binding OverallProgressPercent, Mode=OneWay, Converter={StaticResource PercentDisplayConverter}}" 
-					Style="{StaticResource ItemValue}" VerticalAlignment="Center" HorizontalAlignment="Center" />
+				<ProgressBar
+					Height="15"
+					VerticalAlignment="Center"
+					Style="{StaticResource EncodeDetailsProgress}"
+					Value="{Binding OverallProgressPercent}" />
+				<TextBlock
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					Style="{StaticResource ItemValue}"
+					Text="{Binding OverallProgressPercent,
+				                          Mode=OneWay,
+				                          Converter={StaticResource PercentDisplayConverter}}" />
 			</Grid>
 
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.ElapsedTimeLabel}" Grid.Row="3" Grid.Column="0" Style="{StaticResource ItemLabel}" />
-			<TextBlock 
-				Text="{Binding OverallElapsedTime}" 
-				Grid.Row="3" Grid.Column="1" Style="{StaticResource ItemValue}" />
+			<TextBlock
+				Grid.Row="3"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.ElapsedTimeLabel}" />
+			<TextBlock
+				Grid.Row="3"
+				Grid.Column="1"
+				Style="{StaticResource ItemValue}"
+				Text="{Binding OverallElapsedTime}" />
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.EtaLabel}" Grid.Row="4" Grid.Column="0" Style="{StaticResource ItemLabel}" />
-			<TextBlock 
-				Text="{Binding OverallEta}" 
-				Grid.Row="4" Grid.Column="1" Style="{StaticResource ItemValue}" />
+			<TextBlock
+				Grid.Row="4"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.EtaLabel}" />
+			<TextBlock
+				Grid.Row="4"
+				Grid.Column="1"
+				Style="{StaticResource ItemValue}"
+				Text="{Binding OverallEta}" />
 		</Grid>
 
 		<Grid>
@@ -75,59 +113,119 @@
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition />
 			</Grid.ColumnDefinitions>
-			<TextBlock 
-				Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-				Text="{Binding FileName}" Style="{StaticResource SectionHeader}" />
+			<TextBlock
+				Grid.Row="0"
+				Grid.Column="0"
+				Grid.ColumnSpan="2"
+				Style="{StaticResource SectionHeader}"
+				Text="{Binding FileName}" />
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.FileProgressLabel}" Grid.Row="1" Grid.Column="0" Style="{StaticResource ItemLabel}" />
+			<TextBlock
+				Grid.Row="1"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.FileProgressLabel}" />
 			<Grid Grid.Row="1" Grid.Column="1">
-				<ProgressBar 
-					Height="15" VerticalAlignment="Center" Value="{Binding FileProgressPercent}"
-					Style="{StaticResource EncodeDetailsProgress}"/>
-				<TextBlock 
-					Text="{Binding FileProgressPercent, Mode=OneWay, Converter={StaticResource PercentDisplayConverter}}" 
-					Style="{StaticResource ItemValue}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+				<ProgressBar
+					Height="15"
+					VerticalAlignment="Center"
+					Style="{StaticResource EncodeDetailsProgress}"
+					Value="{Binding FileProgressPercent}" />
+				<TextBlock
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					Style="{StaticResource ItemValue}"
+					Text="{Binding FileProgressPercent,
+				                          Mode=OneWay,
+				                          Converter={StaticResource PercentDisplayConverter}}" />
 			</Grid>
 
 
-			<TextBlock 
-				Text="{Binding PassProgressLabel}" Grid.Row="2" Grid.Column="0" Style="{StaticResource ItemLabel}"
-				Visibility="{Binding ShowPassProgress, Converter={StaticResource VisibilityConverter}}"/>
-			<Grid Grid.Row="2" Grid.Column="1"
-				  Visibility="{Binding ShowPassProgress, Converter={StaticResource VisibilityConverter}}">
-				<ProgressBar 
-					Height="15" VerticalAlignment="Center" Value="{Binding PassProgressPercent}"
-					Style="{StaticResource EncodeDetailsProgress}"/>
-				<TextBlock 
-					Text="{Binding PassProgressPercent, Mode=OneWay, Converter={StaticResource PercentDisplayConverter}}"
-					Style="{StaticResource ItemValue}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+			<TextBlock
+				Grid.Row="2"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{Binding PassProgressLabel}"
+				Visibility="{Binding ShowPassProgress,
+			                                Converter={StaticResource VisibilityConverter}}" />
+			<Grid
+				Grid.Row="2"
+				Grid.Column="1"
+				Visibility="{Binding ShowPassProgress,
+			                           Converter={StaticResource VisibilityConverter}}">
+				<ProgressBar
+					Height="15"
+					VerticalAlignment="Center"
+					Style="{StaticResource EncodeDetailsProgress}"
+					Value="{Binding PassProgressPercent}" />
+				<TextBlock
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					Style="{StaticResource ItemValue}"
+					Text="{Binding PassProgressPercent,
+				                          Mode=OneWay,
+				                          Converter={StaticResource PercentDisplayConverter}}" />
 			</Grid>
 
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.FileSizeLabel}" Grid.Row="3" Grid.Column="0" Style="{StaticResource ItemLabel}" />
-			<TextBlock 
-				Text="{Binding FileSize}" 
-				Grid.Row="3" Grid.Column="1" Style="{StaticResource ItemValue}" />
+			<TextBlock
+				Grid.Row="3"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.FileSizeLabel}" />
+			<TextBlock
+				Grid.Row="3"
+				Grid.Column="1"
+				Style="{StaticResource ItemValue}"
+				Text="{Binding FileSize}" />
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.ElapsedTimeLabel}" Grid.Row="4" Grid.Column="0" Style="{StaticResource ItemLabel}" />
-			<TextBlock 
-				Text="{Binding FileElapsedTime}" 
-				Grid.Row="4" Grid.Column="1" Style="{StaticResource ItemValue}" />
+			<TextBlock
+				Grid.Row="4"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.ElapsedTimeLabel}" />
+			<TextBlock
+				Grid.Row="4"
+				Grid.Column="1"
+				Style="{StaticResource ItemValue}"
+				Text="{Binding FileElapsedTime}" />
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.EtaLabel}" Grid.Row="5" Grid.Column="0" Style="{StaticResource ItemLabel}" />
-			<TextBlock 
-				Text="{Binding FileEta}" 
-				Grid.Row="5" Grid.Column="1" Style="{StaticResource ItemValue}" />
+			<TextBlock
+				Grid.Row="5"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.EtaLabel}" />
+			<TextBlock
+				Grid.Row="5"
+				Grid.Column="1"
+				Style="{StaticResource ItemValue}"
+				Text="{Binding FileEta}" />
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.CurrentFpsLabel}" Grid.Row="6" Grid.Column="0" Style="{StaticResource ItemLabel}" />
-			<TextBlock 
-				Text="{Binding CurrentFps, Mode=OneWay, Converter={StaticResource DoubleDisplayConverter}}" 
-				Grid.Row="6" Grid.Column="1" Style="{StaticResource ItemValue}" />
+			<TextBlock
+				Grid.Row="6"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.CurrentFpsLabel}" />
+			<TextBlock
+				Grid.Row="6"
+				Grid.Column="1"
+				Style="{StaticResource ItemValue}"
+				Text="{Binding CurrentFps,
+			                          Mode=OneWay,
+			                          Converter={StaticResource DoubleDisplayConverter}}" />
 
-			<TextBlock Text="{x:Static Resources:EncodeDetailsRes.AverageFpsLabel}" Grid.Row="7" Grid.Column="0" Style="{StaticResource ItemLabel}" />
-			<TextBlock 
-				Text="{Binding AverageFps, Mode=OneWay, Converter={StaticResource DoubleDisplayConverter}}" 
-				Grid.Row="7" Grid.Column="1" Style="{StaticResource ItemValue}" />
+			<TextBlock
+				Grid.Row="7"
+				Grid.Column="0"
+				Style="{StaticResource ItemLabel}"
+				Text="{x:Static Resources:EncodeDetailsRes.AverageFpsLabel}" />
+			<TextBlock
+				Grid.Row="7"
+				Grid.Column="1"
+				Style="{StaticResource ItemValue}"
+				Text="{Binding AverageFps,
+			                          Mode=OneWay,
+			                          Converter={StaticResource DoubleDisplayConverter}}" />
 		</Grid>
 	</StackPanel>
 </Window>
