--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -3,19 +3,21 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
-	xmlns:prop="clr-namespace:VidCoder.Properties"
-	xmlns:res="clr-namespace:VidCoder.Resources" 
 	xmlns:local="clr-namespace:VidCoder"
 	xmlns:localmodel="clr-namespace:VidCoder.Model"
+	xmlns:res="clr-namespace:VidCoder.Resources"
 	Title="{Binding Title}"
-	Width="864" Height="514"
-	MinWidth="405" MinHeight="200"
-	Closing="Window_Closing"
+	Width="{x:Static local:WindowConstants.PreviewDefaultWidth}"
+	Height="{x:Static local:WindowConstants.PreviewDefaultHeight}"
+	MinWidth="405"
+	MinHeight="200"
 	AllowDrop="True"
-	PreviewDrop="Window_PreviewDrop"
+	Closing="Window_Closing"
 	PreviewDragOver="Window_PreviewDragOver"
-	ShowInTaskbar="False" WindowStyle="ToolWindow"
-	TextOptions.TextFormattingMode="Display">
+	PreviewDrop="Window_PreviewDrop"
+	ShowInTaskbar="False"
+	TextOptions.TextFormattingMode="Display"
+	WindowStyle="ToolWindow">
 	<Window.Resources>
 		<Style x:Key="PreviewText" TargetType="TextBlock">
 			<Setter Property="Foreground" Value="White" />
@@ -25,49 +27,85 @@
 			<Setter Property="FontWeight" Value="Bold" />
 			<Setter Property="Effect">
 				<Setter.Value>
-					<DropShadowEffect Opacity="0.9" BlurRadius="10" ShadowDepth="0" />
+					<DropShadowEffect
+						BlurRadius="10"
+						Opacity="0.9"
+						ShadowDepth="0" />
 				</Setter.Value>
 			</Setter>
 		</Style>
 		<Storyboard x:Key="FadePreviewControlsOut">
 			<DoubleAnimation
+				Duration="0:0:1.5"
 				Storyboard.TargetProperty="Opacity"
-				To="0.0" Duration="0:0:1.5" />
+				To="0.0" />
 		</Storyboard>
 		<Storyboard x:Key="FadePreviewControlsIn">
 			<DoubleAnimation
+				Duration="0:0:0.2"
 				Storyboard.TargetProperty="Opacity"
-				To="1.0" Duration="0:0:0.2" />
+				To="1.0" />
 		</Storyboard>
-		<local:EnumDisplayer Type="{x:Type localmodel:PreviewDisplay}" x:Key="DisplayChoices" />
+		<local:EnumDisplayer x:Key="DisplayChoices" Type="{x:Type localmodel:PreviewDisplay}" />
 	</Window.Resources>
 	<Window.InputBindings>
-        <KeyBinding Key="Q" Modifiers="Control" Command="{Binding ProcessingVM.AddToQueueCommand}" />
-        <KeyBinding Key="O" Modifiers="Control+Shift" Command="{Binding ProcessingVM.QueueFilesCommand}" />
-		<KeyBinding Key="T" Modifiers="Control" Command="{Binding ProcessingVM.QueueTitlesCommand}" />
-        <KeyBinding Key="D" Modifiers="Control" Command="{Binding OutputPathVM.PickOutputPathCommand}" />
-    </Window.InputBindings>
+		<KeyBinding
+			Key="Q"
+			Command="{Binding ProcessingVM.AddToQueueCommand}"
+			Modifiers="Control" />
+		<KeyBinding
+			Key="O"
+			Command="{Binding ProcessingVM.QueueFilesCommand}"
+			Modifiers="Control+Shift" />
+		<KeyBinding
+			Key="T"
+			Command="{Binding ProcessingVM.QueueTitlesCommand}"
+			Modifiers="Control" />
+		<KeyBinding
+			Key="D"
+			Command="{Binding OutputPathVM.PickOutputPathCommand}"
+			Modifiers="Control" />
+	</Window.InputBindings>
 	<Grid>
-		<Grid Margin="0" Name="previewImageHolder" SizeChanged="previewImageHolder_SizeChanged" Background="#666666">
+		<Grid
+			Name="previewImageHolder"
+			Margin="0"
+			Background="#666666"
+			SizeChanged="previewImageHolder_SizeChanged">
 			<Image
-				Name="previewImage" Stretch="Fill" HorizontalAlignment="Left" VerticalAlignment="Top"
+				Name="previewImage"
+				HorizontalAlignment="Left"
+				VerticalAlignment="Top"
 				Source="{Binding PreviewImage}"
-				Visibility="{Binding SingleFitImageVisible, Converter={StaticResource VisibilityConverter}}" />
+				Stretch="Fill"
+				Visibility="{Binding SingleFitImageVisible,
+			                            Converter={StaticResource VisibilityConverter}}" />
 			<ScrollViewer
 				Name="previewImageScrollViewer"
-				Visibility="{Binding SingleOneToOneImageVisible, Converter={StaticResource VisibilityConverter}}"
-				HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" SizeChanged="previewImageScrollViewer_SizeChanged" >
+				HorizontalScrollBarVisibility="Auto"
+				SizeChanged="previewImageScrollViewer_SizeChanged"
+				VerticalScrollBarVisibility="Auto"
+				Visibility="{Binding SingleOneToOneImageVisible,
+			                                   Converter={StaticResource VisibilityConverter}}">
 				<Image
 					Name="previewImageOneToOne"
-					Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" SizeChanged="previewImageOneToOne_SizeChanged"
-					Source="{Binding PreviewImage}"/>
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					SizeChanged="previewImageOneToOne_SizeChanged"
+					Source="{Binding PreviewImage}"
+					Stretch="None" />
 			</ScrollViewer>
 			<Grid
 				Margin="0,0,0,0"
-				Visibility="{Binding CornersImagesVisible, Converter={StaticResource VisibilityConverter}}"
-				UseLayoutRounding="True">
+				UseLayoutRounding="True"
+				Visibility="{Binding CornersImagesVisible,
+			                           Converter={StaticResource VisibilityConverter}}">
 				<Grid.Background>
-					<ImageBrush ImageSource="/Icons/crop_bg_tile_12x12.png" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,12,12" />
+					<ImageBrush
+						ImageSource="/Icons/crop_bg_tile_12x12.png"
+						TileMode="Tile"
+						Viewport="0,0,12,12"
+						ViewportUnits="Absolute" />
 				</Grid.Background>
 				<Grid.RowDefinitions>
 					<RowDefinition />
@@ -78,56 +116,82 @@
 					<ColumnDefinition Width="10" />
 					<ColumnDefinition />
 				</Grid.ColumnDefinitions>
-				
-				<!-- Top left -->
+
+				<!--  Top left  -->
 				<Grid>
 					<TextBlock
-						Text="{x:Static res:PreviewRes.TopMargin}"
-						Style="{StaticResource MarginText}" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,4,0,0" />
+						Margin="0,4,0,0"
+						HorizontalAlignment="Center"
+						VerticalAlignment="Top"
+						Style="{StaticResource MarginText}"
+						Text="{x:Static res:PreviewRes.TopMargin}" />
 					<TextBlock
-						Text="{x:Static res:PreviewRes.LeftMargin}"
-						Style="{StaticResource MarginText}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,0,0,0">
+						Margin="4,0,0,0"
+						HorizontalAlignment="Left"
+						VerticalAlignment="Center"
+						Style="{StaticResource MarginText}"
+						Text="{x:Static res:PreviewRes.LeftMargin}">
 						<TextBlock.LayoutTransform>
 							<RotateTransform Angle="270" />
 						</TextBlock.LayoutTransform>
 					</TextBlock>
 					<Grid Name="topLeftImageHolder" Margin="24,24,0,0">
 						<Image
-						Name="topLeftImage" HorizontalAlignment="Right" VerticalAlignment="Bottom"
-						RenderOptions.BitmapScalingMode="NearestNeighbor" />
+							Name="topLeftImage"
+							HorizontalAlignment="Right"
+							VerticalAlignment="Bottom"
+							RenderOptions.BitmapScalingMode="NearestNeighbor" />
 					</Grid>
 				</Grid>
-				
-				<!-- Divider -->
+
+				<!--  Divider  -->
 				<Grid
 					Grid.Column="1"
-					Background="#111" Visibility="{Binding InCornerDisplayMode, Converter={StaticResource VisibilityConverter}}" />
+					Background="#111"
+					Visibility="{Binding InCornerDisplayMode,
+				                           Converter={StaticResource VisibilityConverter}}" />
 
-				<!-- Bottom right -->
+				<!--  Bottom right  -->
 				<Grid Grid.Column="2">
 					<Grid Name="bottomRightImageHolder" Margin="0,0,24,24">
-						<Image 
-							Name="bottomRightImage" HorizontalAlignment="Left" VerticalAlignment="Top"
-							RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+						<Image
+							Name="bottomRightImage"
+							HorizontalAlignment="Left"
+							VerticalAlignment="Top"
+							RenderOptions.BitmapScalingMode="NearestNeighbor" />
 					</Grid>
 					<TextBlock
-						Text="{x:Static res:PreviewRes.RightMargin}"
-						Style="{StaticResource MarginText}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,4,0">
+						Margin="0,0,4,0"
+						HorizontalAlignment="Right"
+						VerticalAlignment="Center"
+						Style="{StaticResource MarginText}"
+						Text="{x:Static res:PreviewRes.RightMargin}">
 						<TextBlock.LayoutTransform>
 							<RotateTransform Angle="270" />
 						</TextBlock.LayoutTransform>
 					</TextBlock>
 					<TextBlock
-						Text="{x:Static res:PreviewRes.BottomMargin}"
-						Style="{StaticResource MarginText}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,4"/>
+						Margin="0,0,0,4"
+						HorizontalAlignment="Center"
+						VerticalAlignment="Bottom"
+						Style="{StaticResource MarginText}"
+						Text="{x:Static res:PreviewRes.BottomMargin}" />
 				</Grid>
 				<Grid
-					Grid.Row="1" Grid.ColumnSpan="3"
-					Height="106" VerticalAlignment="Bottom" Background="#111" Visibility="{Binding InCornerDisplayMode, Converter={StaticResource VisibilityConverter}}" />
+					Grid.Row="1"
+					Grid.ColumnSpan="3"
+					Height="106"
+					VerticalAlignment="Bottom"
+					Background="#111"
+					Visibility="{Binding InCornerDisplayMode,
+				                           Converter={StaticResource VisibilityConverter}}" />
 			</Grid>
 
 			<Grid
-				Name="previewControls" Margin="6,0,6,6" Height="100" VerticalAlignment="Bottom">
+				Name="previewControls"
+				Height="100"
+				Margin="6,0,6,6"
+				VerticalAlignment="Bottom">
 				<Grid.Style>
 					<Style TargetType="Grid">
 						<Style.Triggers>
@@ -138,38 +202,59 @@
 									<Condition Binding="{Binding InCornerDisplayMode}" Value="False" />
 								</MultiDataTrigger.Conditions>
 								<MultiDataTrigger.EnterActions>
-									<BeginStoryboard Storyboard="{StaticResource FadePreviewControlsOut}" x:Name="FadePreviewControlsOut_BeginStoryboard" />
+									<BeginStoryboard x:Name="FadePreviewControlsOut_BeginStoryboard" Storyboard="{StaticResource FadePreviewControlsOut}" />
 								</MultiDataTrigger.EnterActions>
 								<MultiDataTrigger.ExitActions>
 									<RemoveStoryboard BeginStoryboardName="FadePreviewControlsOut_BeginStoryboard" />
-									<BeginStoryboard Storyboard="{StaticResource FadePreviewControlsIn}" x:Name="FadePreviewControlsIn_BeginStoryboard" />
+									<BeginStoryboard x:Name="FadePreviewControlsIn_BeginStoryboard" Storyboard="{StaticResource FadePreviewControlsIn}" />
 								</MultiDataTrigger.ExitActions>
 							</MultiDataTrigger>
 						</Style.Triggers>
 					</Style>
 				</Grid.Style>
-				<Border CornerRadius="10" Background="#111" Opacity="0.9" />
+				<Border
+					Background="#111"
+					CornerRadius="10"
+					Opacity="0.9" />
 				<controls:SeekBar
-					Height="24" Margin="10,8,10,0" VerticalAlignment="Top"
-					Slot="{Binding SelectedPreview, Mode=TwoWay}"
-					NumSlots="{Binding PreviewCount, Mode=OneWay}"
+					Height="24"
+					Margin="10,8,10,0"
+					VerticalAlignment="Top"
 					IsEnabled="{Binding SeekBarEnabled}"
-					/>
+					NumSlots="{Binding PreviewCount,
+				                                     Mode=OneWay}"
+					Slot="{Binding SelectedPreview,
+				                                 Mode=TwoWay}" />
 				<StackPanel
-					Orientation="Vertical" Margin="0,0,0,8" VerticalAlignment="Bottom" HorizontalAlignment="Center"
-					Visibility="{Binding GeneratingPreview, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}">
-					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+					Margin="0,0,0,8"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Bottom"
+					Orientation="Vertical"
+					Visibility="{Binding GeneratingPreview,
+				                                 Converter={StaticResource VisibilityConverter},
+				                                 ConverterParameter=True}">
+					<StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
 						<Button
 							Height="23"
-							Command="{Binding GeneratePreviewCommand}" ToolTip="{x:Static res:PreviewRes.EncodePreviewClipToolTip}"
-							Margin="20,0,0,0" Style="{StaticResource GrayOnDisabledControl}">
-							<StackPanel Orientation="Horizontal" Margin="4,0">
-								<Image Source="/Icons/play_clip.png" VerticalAlignment="Center" Height="15" />
-								<TextBlock Text="{x:Static res:PreviewRes.EncodePreviewClipButton}" Margin="5,0,0,0" VerticalAlignment="Center" />
+							Margin="20,0,0,0"
+							Command="{Binding GeneratePreviewCommand}"
+							Style="{StaticResource GrayOnDisabledControl}"
+							ToolTip="{x:Static res:PreviewRes.EncodePreviewClipToolTip}">
+							<StackPanel Margin="4,0" Orientation="Horizontal">
+								<Image
+									Height="15"
+									VerticalAlignment="Center"
+									Source="/Icons/play_clip.png" />
+								<TextBlock
+									Margin="5,0,0,0"
+									VerticalAlignment="Center"
+									Text="{x:Static res:PreviewRes.EncodePreviewClipButton}" />
 							</StackPanel>
 						</Button>
 						<ComboBox
-							Height="22" Width="45" Margin="10,0,0,0"
+							Width="45"
+							Height="22"
+							Margin="10,0,0,0"
 							SelectedValue="{Binding PreviewSeconds}"
 							SelectedValuePath="Content">
 							<ComboBoxItem>5</ComboBoxItem>
@@ -180,33 +265,53 @@
 							<ComboBoxItem>120</ComboBoxItem>
 						</ComboBox>
 						<TextBlock
-							Text="{x:Static res:PreviewRes.Seconds}" VerticalAlignment="Center" Margin="7,0,0,0"
-							Style="{StaticResource PreviewText}" />
+							Margin="7,0,0,0"
+							VerticalAlignment="Center"
+							Style="{StaticResource PreviewText}"
+							Text="{x:Static res:PreviewRes.Seconds}" />
 					</StackPanel>
-					<StackPanel Orientation="Horizontal" Margin="0,6,0,0" HorizontalAlignment="Center">
+					<StackPanel
+						Margin="0,6,0,0"
+						HorizontalAlignment="Center"
+						Orientation="Horizontal">
 						<Button
 							Height="23"
-							Command="{Binding PlaySourceCommand}" ToolTip="{Binding PlaySourceToolTip}" ToolTipService.ShowOnDisabled="True"
-							Margin="0,0,0,0" Style="{StaticResource GrayOnDisabledControl}">
-							<StackPanel Orientation="Horizontal" Margin="4,0">
-								<Image Source="/Icons/blue_play_80.png" VerticalAlignment="Center" Height="15" />
-								<TextBlock Text="{x:Static res:PreviewRes.PlaySourceButton}" Margin="5,0,0,0" VerticalAlignment="Center" />
+							Margin="0,0,0,0"
+							Command="{Binding PlaySourceCommand}"
+							Style="{StaticResource GrayOnDisabledControl}"
+							ToolTip="{Binding PlaySourceToolTip}"
+							ToolTipService.ShowOnDisabled="True">
+							<StackPanel Margin="4,0" Orientation="Horizontal">
+								<Image
+									Height="15"
+									VerticalAlignment="Center"
+									Source="/Icons/blue_play_80.png" />
+								<TextBlock
+									Margin="5,0,0,0"
+									VerticalAlignment="Center"
+									Text="{x:Static res:PreviewRes.PlaySourceButton}" />
 							</StackPanel>
 						</Button>
 						<TextBlock
-							Margin="20,0,0,0" VerticalAlignment="Center"
-							Text="{x:Static res:PreviewRes.ViewLabel}" Foreground="White"
-							/>
+							Margin="20,0,0,0"
+							VerticalAlignment="Center"
+							Foreground="White"
+							Text="{x:Static res:PreviewRes.ViewLabel}" />
 						<ComboBox
-							MinWidth="100" Margin="6,0,0,0"
-							ItemsSource="{Binding DisplayNames, Source={StaticResource DisplayChoices}}"
-							SelectedValue="{Binding DisplayType, Converter={StaticResource DisplayChoices}}"/>
+							MinWidth="100"
+							Margin="6,0,0,0"
+							ItemsSource="{Binding DisplayNames,
+						                                Source={StaticResource DisplayChoices}}"
+							SelectedValue="{Binding DisplayType,
+						                                  Converter={StaticResource DisplayChoices}}" />
 					</StackPanel>
 				</StackPanel>
 
-				<Grid 
-					VerticalAlignment="Bottom" Margin="12,0,12,23"
-					Visibility="{Binding GeneratingPreview, Converter={StaticResource VisibilityConverter}}">
+				<Grid
+					Margin="12,0,12,23"
+					VerticalAlignment="Bottom"
+					Visibility="{Binding GeneratingPreview,
+				                           Converter={StaticResource VisibilityConverter}}">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="Auto" />
 						<ColumnDefinition />
@@ -214,18 +319,25 @@
 					</Grid.ColumnDefinitions>
 					<TextBlock
 						Grid.Column="0"
-						HorizontalAlignment="Left" VerticalAlignment="Center"
+						HorizontalAlignment="Left"
+						VerticalAlignment="Center"
 						Style="{StaticResource PreviewText}"
 						Text="{x:Static res:PreviewRes.GeneratingPreview}" />
 					<ProgressBar
 						Grid.Column="1"
-						HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Height="20" Margin="10,0,10,0"
-						Value="{Binding PreviewPercentComplete}"/>
+						Height="20"
+						Margin="10,0,10,0"
+						HorizontalAlignment="Stretch"
+						VerticalAlignment="Bottom"
+						Value="{Binding PreviewPercentComplete}" />
 					<Button
 						Grid.Column="2"
-						Content="{x:Static res:CommonRes.Cancel}"
-						HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="23" MinWidth="55"
-						Command="{Binding CancelPreviewCommand}"/>
+						Height="23"
+						MinWidth="55"
+						HorizontalAlignment="Right"
+						VerticalAlignment="Bottom"
+						Command="{Binding CancelPreviewCommand}"
+						Content="{x:Static res:CommonRes.Cancel}" />
 				</Grid>
 
 			</Grid>
