Made picker list panel resizable

--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -6,8 +6,8 @@
 	xmlns:view="clr-namespace:VidCoder.View"
 	xmlns:vidCoder="clr-namespace:VidCoder"
 	Title="{Binding WindowTitle}"
-	Width="{x:Static vidCoder:WindowConstants.EncodingDefaultWidth}"
-	Height="{x:Static vidCoder:WindowConstants.EncodingDefaultHeight}"
+	Width="671"
+	Height="467"
 	MinWidth="588"
 	MinHeight="467"
 	Closed="Window_Closed"
