--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -5,8 +5,8 @@
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	xmlns:vidCoder="clr-namespace:VidCoder"
 	Title="{x:Static res:LogRes.LogWindowTitle}"
-	Width="{x:Static vidCoder:WindowConstants.LogDefaultWidth}"
-	Height="{x:Static vidCoder:WindowConstants.LogDefaultHeight}"
+	Width="459"
+	Height="393"
 	MinWidth="220"
 	MinHeight="95"
 	Closing="Window_Closing"
