--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -12,8 +12,8 @@
 	xmlns:tb="http://www.hardcodet.net/taskbar"
 	xmlns:viewmodel="clr-namespace:VidCoder.ViewModel"
 	Title="{Binding WindowTitle}"
-	Width="{x:Static local:WindowConstants.MainDefaultWidth}"
-	Height="{x:Static local:WindowConstants.MainDefaultHeight}"
+	Width="671"
+	Height="445"
 	MinWidth="617"
 	MinHeight="445"
 	AllowDrop="True"
