--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -7,8 +7,8 @@
 	xmlns:localmodel="clr-namespace:VidCoder.Model"
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	Title="{Binding Title}"
-	Width="{x:Static local:WindowConstants.PreviewDefaultWidth}"
-	Height="{x:Static local:WindowConstants.PreviewDefaultHeight}"
+	Width="864"
+	Height="514"
 	MinWidth="405"
 	MinHeight="200"
 	AllowDrop="True"
