Added preset list to left side of encoding window.

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -292,5 +292,6 @@
 				<ContentPresenter />
 			</Border>
 		</ControlTemplate>
+		<Brush x:Key="SplitterBrush">#BCBCBC</Brush>
 	</Application.Resources>
 </Application>
