--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -3,8 +3,8 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:res="clr-namespace:VidCoder.Resources"
-	xmlns:view="clr-namespace:VidCoder.View"
 	xmlns:vidCoder="clr-namespace:VidCoder"
+	xmlns:view="clr-namespace:VidCoder.View"
 	Title="{Binding WindowTitle}"
 	Width="671"
 	Height="467"
@@ -61,241 +61,310 @@
 		<KeyBinding Key="F4" Command="{Binding MainViewModel.OpenOptionsCommand}" />
 	</Window.InputBindings>
 	<Grid>
-		<ToolBarPanel
-			Margin="-5,0,-14,0"
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition
+				Name="listColumn"
+				Width="150"
+				MinWidth="70"
+				MaxWidth="250" />
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+
+		<ListBox
+			Grid.Column="0"
 			HorizontalAlignment="Stretch"
-			VerticalAlignment="Top"
-			UseLayoutRounding="True">
-			<ToolBar Loaded="ToolBar_Loaded" ToolBarTray.IsLocked="True">
-				<ToolBar.Background>
-					<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-						<GradientStop Offset="0.0" Color="#EEE" />
-						<GradientStop Offset="1.0" Color="#BBB" />
-					</LinearGradientBrush>
-				</ToolBar.Background>
-				<TextBlock
-					Width="158"
-					Height="24"
-					Margin="0,4,0,0"
-					HorizontalAlignment="Left"
-					VerticalAlignment="Top"
-					FontSize="14"
-					FontWeight="Bold"
-					Text="{Binding ProfileName}"
-					TextAlignment="Center"
-					TextTrimming="CharacterEllipsis" />
-				<Button
-					Height="24"
-					MinWidth="70"
-					Command="{Binding SaveCommand}"
-					Padding="5,0"
-					Visibility="{Binding SaveRenameButtonsVisible,
-				                             Converter={StaticResource VisibilityConverter}}">
-					<StackPanel Orientation="Horizontal">
-						<Image
-							Width="16"
-							Height="16"
-							Source="/Icons/save.png" />
-						<TextBlock Margin="5,0,0,0" Text="{x:Static res:EncodingRes.Save}" />
-					</StackPanel>
-				</Button>
-				<Button
-					Height="24"
-					MinWidth="70"
-					Command="{Binding SaveAsCommand}"
-					Content="{x:Static res:EncodingRes.SaveAs}"
-					Padding="5,0" />
-				<Button
-					Height="24"
-					MinWidth="70"
-					Command="{Binding RenameCommand}"
-					Content="{x:Static res:EncodingRes.Rename}"
-					Padding="5,0"
-					Visibility="{Binding SaveRenameButtonsVisible,
-				                             Converter={StaticResource VisibilityConverter}}" />
-				<Button
-					Height="24"
-					MinWidth="70"
-					Command="{Binding DeletePresetCommand}"
-					Padding="5,0"
-					Visibility="{Binding IsModified,
-				                             Converter={StaticResource VisibilityConverter}}">
-					<StackPanel Orientation="Horizontal">
-						<Image
-							Width="16"
-							Height="16"
-							Source="/Icons/undo_16x16.png" />
-						<TextBlock Margin="4,0,0,0" Text="{x:Static res:EncodingRes.Revert}" />
-					</StackPanel>
-				</Button>
-				<Button
-					Height="24"
-					MinWidth="70"
-					Command="{Binding DeletePresetCommand}"
-					Padding="5,0"
-					Visibility="{Binding DeleteButtonVisible,
-				                             Converter={StaticResource VisibilityConverter}}">
-					<StackPanel Orientation="Horizontal">
-						<Grid Background="Transparent">
-							<Rectangle
-								Width="14"
-								Height="3"
-								Fill="{StaticResource RedFill}">
-								<Rectangle.LayoutTransform>
-									<RotateTransform Angle="-45" />
-								</Rectangle.LayoutTransform>
-							</Rectangle>
-							<Rectangle
-								Width="14"
-								Height="3"
-								Fill="{StaticResource RedFill}">
-								<Rectangle.LayoutTransform>
-									<RotateTransform Angle="45" />
-								</Rectangle.LayoutTransform>
-							</Rectangle>
-						</Grid>
-						<TextBlock Margin="4,0,0,0" Text="{x:Static res:CommonRes.Delete}" />
-					</StackPanel>
-				</Button>
-				<Button
-					Height="24"
-					MinWidth="70"
-					Command="{Binding WindowManagerVM.OpenPreviewWindowCommand}"
-					IsEnabled="{Binding HasSourceData}"
-					Padding="5,0"
-					Visibility="{Binding WindowManagerVM.PreviewWindowOpen,
-				                             Converter={StaticResource VisibilityConverter},
-				                             ConverterParameter=True}">
-					<StackPanel Orientation="Horizontal">
-						<Image
-							Width="16"
-							Height="16"
-							Source="/Icons/preview.png" />
-						<TextBlock
-							Margin="5,0,0,0"
-							VerticalAlignment="Center"
-							Text="{x:Static res:CommonRes.PreviewLabel}" />
-					</StackPanel>
-				</Button>
-			</ToolBar>
-		</ToolBarPanel>
+			Background="WhiteSmoke"
+			BorderThickness="0"
+			Margin="0 0 4 0"
+			Canvas.ZIndex="3"
+			Visibility="{Binding PresetPanelOpen,
+					                             Converter={StaticResource VisibilityConverter}}"
+			ItemsSource="{Binding PresetVM.AllPresets}"
+			SelectedItem="{Binding PresetVM.SelectedPreset}">
+			<ListBox.ItemTemplate>
+				<DataTemplate>
+					<TextBlock
+						Margin="5"
+						FontSize="12"
+						Text="{Binding DisplayName}">
+						<TextBlock.Style>
+							<Style TargetType="TextBlock">
+								<Style.Triggers>
+									<DataTrigger Binding="{Binding IsBuiltIn}" Value="False">
+										<Setter Property="Foreground" Value="#0B4BC2" />
+										<Setter Property="FontWeight" Value="SemiBold" />
+									</DataTrigger>
+									<DataTrigger Binding="{Binding IsQueue}" Value="True">
+										<Setter Property="Foreground" Value="#222222" />
+										<Setter Property="FontWeight" Value="Normal" />
+									</DataTrigger>
+									<DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ListBoxItem}}" Value="True">
+										<Setter Property="FontWeight" Value="Bold" />
+									</DataTrigger>
+								</Style.Triggers>
+							</Style>
+						</TextBlock.Style>
+					</TextBlock>
+				</DataTemplate>
+			</ListBox.ItemTemplate>
+		</ListBox>
 
-		<StackPanel
-			Height="32"
-			Margin="20,37,0,0"
-			HorizontalAlignment="Left"
-			VerticalAlignment="Top"
-			Orientation="Horizontal">
-			<Label
-				HorizontalAlignment="Left"
-				VerticalAlignment="Center"
-				Content="{x:Static res:EncodingRes.ContainerLabel}" />
-			<ComboBox
-				Height="23"
-				MinWidth="136"
-				HorizontalAlignment="Left"
-				VerticalAlignment="Center"
-				VerticalContentAlignment="Center"
-				DisplayMemberPath="Display"
-				ItemsSource="{Binding ContainerChoices}"
-				SelectedValue="{Binding ContainerName}"
-				SelectedValuePath="Value" />
-			<Label
-				Height="28"
-				Margin="10,0,0,0"
-				HorizontalAlignment="Left"
-				VerticalAlignment="Center"
-				Content="{x:Static res:EncodingRes.ExtensionLabel}"
-				Visibility="{Binding ShowMp4Choices,
-			                            Converter={StaticResource VisibilityConverter}}" />
+		<GridSplitter
+			Grid.Column="0"
+			Width="4"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Stretch"
+			Background="{StaticResource SplitterBrush}"
+			Visibility="{Binding PresetPanelOpen,
+					                             Converter={StaticResource VisibilityConverter}}"
+			Canvas.ZIndex="4"
+			ShowsPreview="True" />
 
-			<StackPanel Orientation="Vertical">
-				<RadioButton
-					Width="53.578"
-					Height="16"
-					HorizontalAlignment="Left"
-					VerticalAlignment="Top"
-					IsChecked="{Binding PreferredExtension,
-				                                 Converter={StaticResource EnumBoolConverter},
-				                                 ConverterParameter=Mp4}"
-					Visibility="{Binding ShowMp4Choices,
-				                                  Converter={StaticResource VisibilityConverter}}">
-					.mp4
-				</RadioButton>
-				<RadioButton
-					Width="53.578"
-					Height="16"
-					HorizontalAlignment="Left"
-					VerticalAlignment="Top"
-					IsChecked="{Binding PreferredExtension,
-				                                 Converter={StaticResource EnumBoolConverter},
-				                                 ConverterParameter=M4v}"
-					Visibility="{Binding ShowMp4Choices,
-				                                  Converter={StaticResource VisibilityConverter}}">
-					.m4v
-				</RadioButton>
-			</StackPanel>
-
-			<StackPanel Margin="10,0,0,0" Orientation="Vertical">
-				<CheckBox
-					VerticalAlignment="Center"
-					Content="{x:Static res:EncodingRes.IncludeChapterMarkersCheckBox}"
-					IsChecked="{Binding IncludeChapterMarkers}"
-					ToolTip="{x:Static res:EncodingRes.IncludeChapterMarkersToolTip}" />
-				<CheckBox
-					HorizontalAlignment="Left"
-					VerticalAlignment="Top"
-					Content="{x:Static res:EncodingRes.WebOptimizedCheckBox}"
-					IsChecked="{Binding Optimize}"
-					ToolTip="{x:Static res:EncodingRes.WebOptimizedToolTip}"
-					Visibility="{Binding ShowMp4Choices,
-				                               Converter={StaticResource VisibilityConverter}}" />
-			</StackPanel>
+		<Grid Grid.Column="1" Name="mainGrid">
+			<ToolBarPanel
+				Margin="-5,0,-14,0"
+				HorizontalAlignment="Stretch"
+				VerticalAlignment="Top"
+				UseLayoutRounding="True">
+				<ToolBar Loaded="ToolBar_Loaded" ToolBarTray.IsLocked="True">
+					<ToolBar.Background>
+						<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+							<GradientStop Offset="0.0" Color="#EEE" />
+							<GradientStop Offset="1.0" Color="#BBB" />
+						</LinearGradientBrush>
+					</ToolBar.Background>
+					<Button
+						Height="24"
+						Margin="4 0 0 0"
+						Command="{Binding TogglePresetPanelCommand}"
+						Padding="5 0"
+						ToolTip="{x:Static res:EncodingRes.ClosePresetsListToolTip}"
+						Visibility="{Binding PresetPanelOpen,
+					                             Converter={StaticResource VisibilityConverter}}">
+						<Path Data="M 8,0 L 9,1 L 2,8 L 9,15 L 8,16 L 0,8 Z" Fill="Black" />
+					</Button>
+					<Button
+						Height="24"
+						Margin="4 0 0 0"
+						Command="{Binding TogglePresetPanelCommand}"
+						Padding="5 0"
+						ToolTip="{x:Static res:EncodingRes.OpenPresetsListToolTip}"
+						Visibility="{Binding PresetPanelOpen,
+					                             Converter={StaticResource VisibilityConverter},
+					                             ConverterParameter=True}">
+						<Path Data="M 1,0 L 9,8 L 1,16 L 0,15 L 7,8 L 0,1 Z" Fill="Black" />
+					</Button>
+					<Button
+						Height="24"
+						MinWidth="70"
+						Margin="4 0 0 0"
+						Command="{Binding SaveCommand}"
+						Padding="5 0"
+						Visibility="{Binding SaveRenameButtonsVisible,
+					                             Converter={StaticResource VisibilityConverter}}">
+						<StackPanel Orientation="Horizontal">
+							<Image
+								Width="16"
+								Height="16"
+								Source="/Icons/save.png" />
+							<TextBlock Margin="5,0,0,0" Text="{x:Static res:EncodingRes.Save}" />
+						</StackPanel>
+					</Button>
+					<Button
+						Height="24"
+						MinWidth="70"
+						Command="{Binding SaveAsCommand}"
+						Content="{x:Static res:EncodingRes.SaveAs}"
+						Padding="5,0" />
+					<Button
+						Height="24"
+						MinWidth="70"
+						Command="{Binding RenameCommand}"
+						Content="{x:Static res:EncodingRes.Rename}"
+						Padding="5,0"
+						Visibility="{Binding SaveRenameButtonsVisible,
+					                             Converter={StaticResource VisibilityConverter}}" />
+					<Button
+						Height="24"
+						MinWidth="70"
+						Command="{Binding DeletePresetCommand}"
+						Padding="5,0"
+						Visibility="{Binding IsModified,
+					                             Converter={StaticResource VisibilityConverter}}">
+						<StackPanel Orientation="Horizontal">
+							<Image
+								Width="16"
+								Height="16"
+								Source="/Icons/undo_16x16.png" />
+							<TextBlock Margin="4,0,0,0" Text="{x:Static res:EncodingRes.Revert}" />
+						</StackPanel>
+					</Button>
+					<Button
+						Height="24"
+						MinWidth="70"
+						Command="{Binding DeletePresetCommand}"
+						Padding="5,0"
+						Visibility="{Binding DeleteButtonVisible,
+					                             Converter={StaticResource VisibilityConverter}}">
+						<StackPanel Orientation="Horizontal">
+							<Grid Background="Transparent">
+								<Rectangle
+									Width="14"
+									Height="3"
+									Fill="{StaticResource RedFill}">
+									<Rectangle.LayoutTransform>
+										<RotateTransform Angle="-45" />
+									</Rectangle.LayoutTransform>
+								</Rectangle>
+								<Rectangle
+									Width="14"
+									Height="3"
+									Fill="{StaticResource RedFill}">
+									<Rectangle.LayoutTransform>
+										<RotateTransform Angle="45" />
+									</Rectangle.LayoutTransform>
+								</Rectangle>
+							</Grid>
+							<TextBlock Margin="4,0,0,0" Text="{x:Static res:CommonRes.Delete}" />
+						</StackPanel>
+					</Button>
+					<Button
+						Height="24"
+						MinWidth="70"
+						Command="{Binding WindowManagerVM.OpenPreviewWindowCommand}"
+						IsEnabled="{Binding HasSourceData}"
+						Padding="5,0"
+						Visibility="{Binding WindowManagerVM.PreviewWindowOpen,
+					                             Converter={StaticResource VisibilityConverter},
+					                             ConverterParameter=True}">
+						<StackPanel Orientation="Horizontal">
+							<Image
+								Width="16"
+								Height="16"
+								Source="/Icons/preview.png" />
+							<TextBlock
+								Margin="5,0,0,0"
+								VerticalAlignment="Center"
+								Text="{x:Static res:CommonRes.PreviewLabel}" />
+						</StackPanel>
+					</Button>
+				</ToolBar>
+			</ToolBarPanel>
 
 			<StackPanel
-				Margin="10,0,0,0"
-				VerticalAlignment="Center"
-				Orientation="Vertical">
-				<CheckBox
-					VerticalAlignment="Center"
-					Content="{x:Static res:EncodingRes.Ipod5GSupportCheckBox}"
-					IsChecked="{Binding IPod5GSupport}"
-					ToolTip="{x:Static res:EncodingRes.IPod5GSupportToolTip}"
-					Visibility="{Binding ShowMp4Choices,
-				                               Converter={StaticResource VisibilityConverter}}" />
-				<CheckBox
+				Height="32"
+				Margin="20,37,0,0"
+				HorizontalAlignment="Left"
+				VerticalAlignment="Top"
+				Orientation="Horizontal">
+				<Label
 					HorizontalAlignment="Left"
-					VerticalAlignment="Top"
-					Content="{x:Static res:EncodingRes.LargeFileSizeCheckBox}"
-					IsChecked="{Binding LargeFile}"
-					ToolTip="{x:Static res:EncodingRes.LargeFileSizeToolTip}"
-					Visibility="{Binding ShowOldMp4Choices,
-				                               Converter={StaticResource VisibilityConverter}}" />
+					VerticalAlignment="Center"
+					Content="{x:Static res:EncodingRes.ContainerLabel}" />
+				<ComboBox
+					Height="23"
+					MinWidth="136"
+					HorizontalAlignment="Left"
+					VerticalAlignment="Center"
+					VerticalContentAlignment="Center"
+					DisplayMemberPath="Display"
+					ItemsSource="{Binding ContainerChoices}"
+					SelectedValue="{Binding ContainerName}"
+					SelectedValuePath="Value" />
+				<Label
+					Height="28"
+					Margin="10,0,0,0"
+					HorizontalAlignment="Left"
+					VerticalAlignment="Center"
+					Content="{x:Static res:EncodingRes.ExtensionLabel}"
+					Visibility="{Binding ShowMp4Choices,
+				                            Converter={StaticResource VisibilityConverter}}" />
+
+				<StackPanel Orientation="Vertical">
+					<RadioButton
+						Width="53.578"
+						Height="16"
+						HorizontalAlignment="Left"
+						VerticalAlignment="Top"
+						IsChecked="{Binding PreferredExtension,
+					                                 Converter={StaticResource EnumBoolConverter},
+					                                 ConverterParameter=Mp4}"
+						Visibility="{Binding ShowMp4Choices,
+					                                  Converter={StaticResource VisibilityConverter}}">
+						.mp4
+					</RadioButton>
+					<RadioButton
+						Width="53.578"
+						Height="16"
+						HorizontalAlignment="Left"
+						VerticalAlignment="Top"
+						IsChecked="{Binding PreferredExtension,
+					                                 Converter={StaticResource EnumBoolConverter},
+					                                 ConverterParameter=M4v}"
+						Visibility="{Binding ShowMp4Choices,
+					                                  Converter={StaticResource VisibilityConverter}}">
+						.m4v
+					</RadioButton>
+				</StackPanel>
+
+				<StackPanel Margin="10,0,0,0" Orientation="Vertical">
+					<CheckBox
+						VerticalAlignment="Center"
+						Content="{x:Static res:EncodingRes.IncludeChapterMarkersCheckBox}"
+						IsChecked="{Binding IncludeChapterMarkers}"
+						ToolTip="{x:Static res:EncodingRes.IncludeChapterMarkersToolTip}" />
+					<CheckBox
+						HorizontalAlignment="Left"
+						VerticalAlignment="Top"
+						Content="{x:Static res:EncodingRes.WebOptimizedCheckBox}"
+						IsChecked="{Binding Optimize}"
+						ToolTip="{x:Static res:EncodingRes.WebOptimizedToolTip}"
+						Visibility="{Binding ShowMp4Choices,
+					                               Converter={StaticResource VisibilityConverter}}" />
+				</StackPanel>
+
+				<StackPanel
+					Margin="10,0,0,0"
+					VerticalAlignment="Center"
+					Orientation="Vertical">
+					<CheckBox
+						VerticalAlignment="Center"
+						Content="{x:Static res:EncodingRes.Ipod5GSupportCheckBox}"
+						IsChecked="{Binding IPod5GSupport}"
+						ToolTip="{x:Static res:EncodingRes.IPod5GSupportToolTip}"
+						Visibility="{Binding ShowMp4Choices,
+					                               Converter={StaticResource VisibilityConverter}}" />
+					<CheckBox
+						HorizontalAlignment="Left"
+						VerticalAlignment="Top"
+						Content="{x:Static res:EncodingRes.LargeFileSizeCheckBox}"
+						IsChecked="{Binding LargeFile}"
+						ToolTip="{x:Static res:EncodingRes.LargeFileSizeToolTip}"
+						Visibility="{Binding ShowOldMp4Choices,
+					                               Converter={StaticResource VisibilityConverter}}" />
+				</StackPanel>
 			</StackPanel>
-		</StackPanel>
 
-
-
-		<TabControl
-			Name="tabControl"
-			Margin="0,73,0,0"
-			SelectedIndex="{Binding SelectedTabIndex}">
-			<TabItem Header="{x:Static res:EncodingRes.TabHeader_Picture}">
-				<view:PicturePanel DataContext="{Binding PicturePanelViewModel}" />
-			</TabItem>
-			<TabItem Header="{x:Static res:EncodingRes.TabHeader_VideoFilters}">
-				<view:VideoFiltersPanel DataContext="{Binding VideoFiltersPanelViewModel}" />
-			</TabItem>
-			<TabItem Header="{x:Static res:EncodingRes.TabHeader_Video}">
-				<view:VideoPanel DataContext="{Binding VideoPanelViewModel}" />
-			</TabItem>
-			<TabItem Header="{x:Static res:EncodingRes.TabHeader_Advanced}" Visibility="{Binding VideoPanelViewModel.UseAdvancedTab, Converter={StaticResource VisibilityConverter}}">
-				<view:AdvancedPanel DataContext="{Binding AdvancedPanelViewModel}" />
-			</TabItem>
-			<TabItem Header="{x:Static res:EncodingRes.TabHeader_Audio}">
-				<view:AudioPanel DataContext="{Binding AudioPanelViewModel}" />
-			</TabItem>
-		</TabControl>
-
+			<TabControl
+				Name="tabControl"
+				Margin="0,73,0,0"
+				SelectedIndex="{Binding SelectedTabIndex}">
+				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Picture}">
+					<view:PicturePanel DataContext="{Binding PicturePanelViewModel}" />
+				</TabItem>
+				<TabItem Header="{x:Static res:EncodingRes.TabHeader_VideoFilters}">
+					<view:VideoFiltersPanel DataContext="{Binding VideoFiltersPanelViewModel}" />
+				</TabItem>
+				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Video}">
+					<view:VideoPanel DataContext="{Binding VideoPanelViewModel}" />
+				</TabItem>
+				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Advanced}" Visibility="{Binding VideoPanelViewModel.UseAdvancedTab, Converter={StaticResource VisibilityConverter}}">
+					<view:AdvancedPanel DataContext="{Binding AdvancedPanelViewModel}" />
+				</TabItem>
+				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Audio}">
+					<view:AudioPanel DataContext="{Binding AudioPanelViewModel}" />
+				</TabItem>
+			</TabControl>
+		</Grid>
 	</Grid>
 </Window>
