Added encoding preset, automatic queue and automatic encode to pickers. Updated copyright year

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -4,7 +4,8 @@
 	xmlns:converters="clr-namespace:VidCoder.Converters"
 	xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
 	xmlns:s="clr-namespace:System;assembly=mscorlib"
-	xmlns:controls="clr-namespace:VidCoder.Controls">
+	xmlns:controls="clr-namespace:VidCoder.Controls"
+	xmlns:res="clr-namespace:VidCoder.Resources">
 	<Application.Resources>
 		<converters:VisibilityConverter x:Key="VisibilityConverter" />
 		<converters:EnumBoolConverter x:Key="EnumBoolConverter" />
@@ -29,6 +30,55 @@
 					<Setter Property="Foreground" Value="#999999"></Setter>
 				</DataTrigger>
 			</Style.Triggers>
+		</Style>
+
+		<Style x:Key="PresetComboStyle" TargetType="ComboBox">
+			<Setter Property="Height" Value="23" />
+			<Setter Property="MinWidth" Value="140" />
+			<Setter Property="MaxWidth" Value="220" />
+			<Setter Property="VerticalContentAlignment" Value="Center" />
+			<Setter Property="ItemsSource" Value="{Binding PresetsVM.AllPresets}" />
+			<Setter Property="UseLayoutRounding" Value="True" />
+			<Setter Property="ItemContainerStyle">
+				<Setter.Value>
+					<Style TargetType="ComboBoxItem">
+						<Setter Property="Padding" Value="5 2" />
+					</Style>
+				</Setter.Value>
+			</Setter>
+			<Setter Property="ItemTemplate">
+				<Setter.Value>
+					<DataTemplate>
+						<StackPanel Orientation="Horizontal">
+							<TextBlock VerticalAlignment="Center" Text="{Binding DisplayName}">
+								<TextBlock.Style>
+									<Style TargetType="TextBlock">
+										<Style.Triggers>
+											<DataTrigger Binding="{Binding IsBuiltIn}" Value="False">
+												<Setter Property="Foreground" Value="#0B4BC2" />
+												<Setter Property="FontWeight" Value="SemiBold" />
+											</DataTrigger>
+											<DataTrigger Binding="{Binding IsQueue}" Value="True">
+												<Setter Property="Foreground" Value="#222222" />
+												<Setter Property="FontWeight" Value="Normal" />
+											</DataTrigger>
+										</Style.Triggers>
+									</Style>
+								</TextBlock.Style>
+							</TextBlock>
+							<TextBlock
+											Margin="7 0 0 0"
+											VerticalAlignment="Center"
+											FontSize="11"
+											FontStyle="Italic"
+											Foreground="Gray"
+											Text="{x:Static res:MainRes.ModifiedAffix}"
+											Visibility="{Binding IsModified,
+								                                Converter={StaticResource VisibilityConverter}}" />
+						</StackPanel>
+					</DataTemplate>
+				</Setter.Value>
+			</Setter>
 		</Style>
 
 		<Style x:Key="CenteredCheckBox" TargetType="CheckBox">
