--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -1263,16 +1263,11 @@
 
 				<ComboBox
 					Name="presetComboBox"
-					Height="22.76"
-					MinWidth="140"
-					MaxWidth="220"
-					Margin="2,0,0,0"
+					Margin="2 0 0 0"
 					HorizontalAlignment="Left"
 					VerticalAlignment="Center"
-					VerticalContentAlignment="Center"
-					ItemsSource="{Binding PresetsVM.AllPresets}"
 					SelectedItem="{Binding PresetsVM.SelectedPreset}"
-					UseLayoutRounding="True">
+					Style="{StaticResource PresetComboStyle}">
 					<ComboBox.Effect>
 						<DropShadowEffect
 							x:Name="presetGlowEffect"
@@ -1280,42 +1275,6 @@
 							ShadowDepth="0"
 							Color="{StaticResource PresetGlowColor}" />
 					</ComboBox.Effect>
-					<ComboBox.ItemContainerStyle>
-						<Style TargetType="ComboBoxItem">
-							<Setter Property="Padding" Value="5,2" />
-						</Style>
-					</ComboBox.ItemContainerStyle>
-					<ComboBox.ItemTemplate>
-						<DataTemplate>
-							<StackPanel Orientation="Horizontal">
-								<TextBlock VerticalAlignment="Center" Text="{Binding DisplayName}">
-									<TextBlock.Style>
-										<Style TargetType="TextBlock">
-											<Style.Triggers>
-												<DataTrigger Binding="{Binding IsBuiltIn}" Value="False">
-													<Setter Property="Foreground" Value="#0B4BC2" />
-													<Setter Property="FontWeight" Value="SemiBold" />
-												</DataTrigger>
-												<DataTrigger Binding="{Binding IsQueue}" Value="True">
-													<Setter Property="Foreground" Value="#222222" />
-													<Setter Property="FontWeight" Value="Normal" />
-												</DataTrigger>
-											</Style.Triggers>
-										</Style>
-									</TextBlock.Style>
-								</TextBlock>
-								<TextBlock
-									Margin="7,0,0,0"
-									VerticalAlignment="Center"
-									FontSize="11"
-									FontStyle="Italic"
-									Foreground="Gray"
-									Text="{x:Static res:MainRes.ModifiedAffix}"
-									Visibility="{Binding IsModified,
-								                                Converter={StaticResource VisibilityConverter}}" />
-							</StackPanel>
-						</DataTemplate>
-					</ComboBox.ItemTemplate>
 				</ComboBox>
 			</StackPanel>
 
