Scan progress is now shown on the taskbar icon.

--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -279,7 +279,7 @@
 		<local:RestoreWindowCommand x:Key="RestoreWindowCommand" />
 	</Window.Resources>
 	<Window.TaskbarItemInfo>
-		<TaskbarItemInfo ProgressState="{Binding ProcessingVM.EncodeProgressState}" ProgressValue="{Binding ProcessingVM.OverallEncodeProgressFraction}" />
+		<TaskbarItemInfo ProgressState="{Binding TaskBarProgressTracker.ProgressState}" ProgressValue="{Binding TaskBarProgressTracker.ProgressFraction}" />
 	</Window.TaskbarItemInfo>
 	<Window.InputBindings>
 		<KeyBinding
